--- a/staff/oihane-unciti/mucho-layout/all-sass/style.css
+++ b/staff/oihane-unciti/mucho-layout/all-sass/style.css
@@ -3,11 +3,10 @@ body {
   width: 99vw;
   margin: 0 auto;
   border: 2px solid;
+  box-sizing: border-box;
 }
 
 .header {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   border-bottom: 1px solid gray;
   padding-bottom: 2vh;
@@ -19,7 +18,6 @@ body {
   z-index: 1;
   width: 100%;
 }
-
 .header__presentation {
   display: none;
   width: 40%;
@@ -27,21 +25,18 @@ body {
 
 .menu {
   list-style: none;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  width: 40%;
+  width: 30%;
+  background-color: red;
+  margin-right: 0.5em;
 }
-
 .menu__li {
   margin-left: 2%;
   display: none;
 }
-
 .menu--top {
   display: none;
 }
-
 .menu__red {
   list-style: block;
   padding: 2%;
@@ -56,7 +51,6 @@ body {
   height: 10%;
   width: 100%;
 }
-
 .nav__border {
   border-bottom: 1px solid lightgray;
   margin-left: 1%;
@@ -65,13 +59,8 @@ body {
 .mosaic {
   width: 95%;
   margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .img {
@@ -80,254 +69,186 @@ body {
 }
 
 .article__information {
+  width: 100%;
   background-color: lightgray;
   border: 1px solid white;
 }
 
 .footer {
-  padding-left: 2%;
-  width: 100%;
+  width: 95%;
+  margin: 0 auto;
+  background-color: blue;
 }
-
 .footer__information {
-  background-color: green;
   width: 100%;
 }
 
 .social_networks {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 .social_networks__bloc {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  flex-direction: column;
 }
 
 @media (min-width: 768px) {
   .header {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
+
   .menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    justify-content: flex-end;
   }
   .menu__li {
     display: block;
   }
+
   .nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    justify-content: flex-end;
   }
   .nav__border {
     border: 0;
   }
-  .article__information {
-    width: 50%;
-  }
+
   .mosaic {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
+
   .img {
     width: 50%;
     padding: 0;
   }
+
+  .article__information {
+    width: 50%;
+    padding: 0;
+  }
+
   .menu {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
     display: inline-flex;
   }
-  .menu__red {
-    padding: 5px;
-  }
   .footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .footer__footer__information {
-    font-size: 1rem;
-    width: 100%;
+    flex-wrap: wrap;
   }
   .footer__address {
     width: 50%;
     margin: 0;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
   }
+
   .social_networks {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    flex-direction: row-reverse;
+    justify-content: space-between;
   }
+
   .social_networks__bloc {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     width: 40%;
   }
+
   .social_networks__copy {
     width: 40%;
   }
-}
 
+  .menu__social {
+    width: 70%;
+    justify-content: space-between;
+  }
+}
 /* DESKTOP */
 @media (min-width: 1025px) {
   .li {
     margin: 2%;
   }
+
   .menu {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    justify-content: flex-end;
   }
   .menu__li {
     display: block;
   }
+
   .header__presentation {
     display: block;
   }
+
   .header {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
   }
+
   .nav {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+    justify-content: flex-end;
   }
   .nav__border {
     border: 0;
   }
+
   .mosaic {
-    display: -ms-grid;
     display: grid;
-    -ms-grid-columns: (25%)[4];
-        grid-template-columns: repeat(4, 25%);
-    -ms-grid-rows: (1fr)[4];
-        grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(4, 25%);
+    grid-template-rows: repeat(4, 1fr);
   }
+
   .img {
     width: 100%;
     height: auto;
-    -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
   .img:hover {
     opacity: 0.9;
   }
+
   .img__big3 {
-    -ms-grid-column: 3;
-        grid-column-start: 3;
+    grid-column-start: 3;
     grid-column-end: 5;
-    -ms-grid-row: 1;
-        grid-row-start: 1;
+    grid-row-start: 1;
     grid-row-end: 3;
   }
+
   .img__big6 {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
+    grid-column-start: 1;
     grid-column-end: 3;
-    -ms-grid-row: 3;
-        grid-row-start: 3;
+    grid-row-start: 3;
     grid-row-end: 5;
   }
+
   .img__big9 {
-    -ms-grid-column: 3;
-        grid-column-start: 3;
+    grid-column-start: 3;
     grid-column-end: 5;
-    -ms-grid-row: 4;
-        grid-row-start: 4;
+    grid-row-start: 4;
     grid-row-end: 6;
   }
-  .article {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
+
   .article__information {
-    margin: 0;
-    padding: 0;
-    width: 33.1%;
-  }
-  .menu {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-  }
-  .footer {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    margin-left: 2%;
     width: 100%;
   }
-  .footer__information {
-    display: -webkit-box;
-    display: -ms-flexbox;
+
+  .footer {
     display: flex;
-    font-size: 2vh;
+    flex-wrap: wrap;
     width: 100%;
   }
   .footer__address {
     width: 25%;
-    margin: 0;
   }
   .footer__copy {
     margin-rigth: 200px;
   }
+
   .menu__red {
-    padding: 5px;
+    justify-content: space-around;
   }
 }
+
 /*# sourceMappingURL=style.css.map */
