--- a/staff/josep-boix/mucho-layout/mobile/style.css
+++ b/staff/josep-boix/mucho-layout/mobile/style.css
@@ -1,68 +1,4 @@
-/*
-id => #
-classe => .
-*/
-*{ 
-    margin:0;
-}
-
-header
-#header__button{
-    background-color: black 0.5;
-}
-
-.header__nav{
-    display:none;
-}
-
-body{
-    width: 100vw;
-}
-
-
-
-/*header{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid grey;
-}*/
-
-.header__allservices{
-    color: #000000;
-    display: grid;
-    grid-template-rows: 2;
-}
-
-img{
-    margin: 10px;
-}
-
-#hamburger{
-    height: 40px;
-    width: 40px;
-}
-
-.menu{
-    background-color: red;
-    color
-}
-
-@media (min-width: 600px) {
-    .header__nav{
-        display:flex;
-    }
-
-    ul{
-        display: flex;
-    }
-    .header__menu{
-        display: inline-block;
-        align-self: center;
-        margin: 0.7rem
-        
-    }
-    #hamburger{
-        display: none;
-    }
+#header__hamburger{
+    height: 20px ;
+    width: 20px;
 }
