--- a/staff/adria-arquimbau/initial-app/style.css
+++ b/staff/adria-arquimbau/initial-app/style.css
@@ -1,23 +1,14 @@
 body{
-    background-color:#F3F2F2;
+    background-color:rgb(236, 230, 230);
     display: grid;
+    width: 100%;
 }
-
-main {
-    justify-content: center;
-}
-
 section{
     border-radius: 15px;
     background-color: rgb(34, 140, 182);
-    width: 30%;
-    height: 60%;
+    margin: 12% 25%;
+    
 }
-
-section a {
-    margin: 10px 0px 0px 0px;
-}
-
 button {
     border: 1px solid black;
 }
@@ -31,17 +22,14 @@ input{
 form div{
     display: grid;
 }
-
 form div button{
     padding: 10px;
     margin: 10px 0px 0px 0px;
     width: 25%;
 }
-
 .panel--show {
     display: block; 
 }
-
 .panel--hide {
     display: none;
 }
