save updated css rules && implement user login logic

--- a/staff/jaume-villarreal/initial-app/css/btn.sass
+++ b/staff/jaume-villarreal/initial-app/css/btn.sass
@@ -26,18 +26,10 @@
         border: 2px solid green
         color: white
     &--back
-        position: absolute
-        width: 2rem
-        top: 0
-        left: 0
-        background-color: #999
-        opacity: .75
-        border: none
+        width: 8rem
         &:hover
-            background-color: orange
-            border: none
-            opacity: 1
-            font-weight: bold
+            background-color: #1DA5F3
+            border-color: #1DA5F3
             color: white
     &--inline
         display: inline-block
