--- a/staff/jaume-villarreal/initial-app/css/form.sass
+++ b/staff/jaume-villarreal/initial-app/css/form.sass
@@ -7,14 +7,15 @@
     >label
         display: block
         margin-bottom: .5rem
+        align-self: flex-start
 
     >input
         display: block
         width: 90%
-        height: 2rem
+        height: 1.5rem
         padding: .25rem
         text-align: center
-        margin-bottom: 1.5rem
+        margin-bottom: 1.25rem
         font-size: 1rem
         
         
