--- a/staff/jaume-villarreal/initial-app/css/normalize.sass
+++ b/staff/jaume-villarreal/initial-app/css/normalize.sass
@@ -1,12 +1,15 @@
+html
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+
 body 
     width: 75vw
-    margin: 1rem auto
+    margin: 2rem auto
 
 .wrapper
-    box-sizing: border-box
     font-family: Helvetica, Arial, sans-serif
-    width: 100%
-
+    width: 90%
 
 .header-1
     font-size: 3rem
