--- a/staff/christian-haag/initial-app/style.sass
+++ b/staff/christian-haag/initial-app/style.sass
@@ -22,7 +22,6 @@ main
     margin: auto
     
 section
-    min
     display: flex
     align-content: center
     
@@ -45,8 +44,8 @@ button
     margin: 5px 0
     
 img
-    width: 50%
-    object-fit: contain
+    width: 45%
+    
 
 .panel
     margin-top: 35px
@@ -61,6 +60,10 @@ img
     margin: 30px 15px
     padding: 10px 5px
     border-radius: 7px
+
+.alert
+    background-color: #ffffff
+    color: red
 
 .link
     margin: 50px 15px
