--- a/staff/manuel-galvez/initial-app/style.css
+++ b/staff/manuel-galvez/initial-app/style.css
@@ -7,16 +7,9 @@
 body {
   width: 100vw;
   height: 100vh;
-}
-
-.company {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.company__name {
-  font-size: 2rem;
+  font-family: "Raleway", sans-serif;
+  color: #0791D0;
+  background-color: rgba(0, 0, 0, 0.05);
 }
 
 .container {
@@ -27,20 +20,21 @@ body {
 }
 
 .company {
-  height: 30vw;
-}
-
-.panel {
-  background: rgba(0, 0, 0, 0.7);
-  width: 80vw;
-  height: 90vw;
-  border-radius: 10px;
+  width: 100%;
+  height: 10rem;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0 20px;
-  padding: 2rem;
+}
+.company__name {
+  font-size: 2rem;
+  margin-left: 0.5rem;
+}
+.company__logo {
+  border-radius: 50%;
+  margin-right: 0.5rem;
+  width: 4rem;
+  height: 4rem;
 }
 
 .landing {
@@ -49,61 +43,122 @@ body {
 }
 
 .btn {
-  width: 150px;
-  height: 40px;
-  margin: 1vh 0;
-  background: rgba(255, 255, 255, 0.7);
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 15rem;
+  height: 3rem;
+  max-width: 15rem;
+  margin: 1vh 0;
   text-decoration: none;
-  color: black;
+  border-radius: 3px;
 }
-.btn__back {
-  background: rgba(0, 0, 0, 0.6);
+.btn__register {
+  background-color: #0791D0;
   color: white;
 }
-
-.landing {
-  display: none;
+.btn__login {
+  border: 1px solid #0791D0;
+  color: #0791D0;
+}
+.btn__submit {
+  background-color: #0791D0;
+  color: white;
+  box-shadow: 0;
+  border: 0;
+  align-self: center;
+  font-size: 1.05rem;
+}
+.btn__back {
+  width: 7rem;
+  max-height: 2.5rem;
+  border: 1px solid #0791D0;
+  color: #0791D0;
+}
+.btn__logout {
+  width: 7rem;
+  height: 2.5rem;
+  border: 1px solid #0791D0;
+  color: #0791D0;
 }
 
-.register {
-  display: none;
-}
-.register__form {
+.form {
   display: flex;
   flex-flow: column wrap;
   align-content: center;
+  justify-content: center;
 }
-.register__input {
-  width: 80%;
-  margin: 2vh 0;
-  min-height: 3vh;
+.form__input {
+  width: 20rem;
+  height: 2rem;
+  margin-top: 0.5rem;
+  margin-bottom: 1rem;
 }
-
-.login {
-  display: none;
-}
-.login__form {
-  display: flex;
-  flex-flow: column wrap;
-}
-.login__input {
-  margin: 2vh 0;
-  height: 3vh;
+.form__input:focus {
+  border: 1px solid #0791D0;
+  outline: 0px;
 }
 
 .home {
   display: flex;
+  flex-flow: column wrap;
   justify-content: center;
   align-items: center;
 }
+.home__btn {
+  margin-top: 3rem;
+}
 
+.registered__message {
+  margin-bottom: 1rem;
+}
+
+.panel {
+  width: 35rem;
+  height: 35rem;
+  border-radius: 10px;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  margin: 0 20px;
+  padding: 2rem;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  background-color: white;
+}
 .panel--hide {
   display: none;
 }
 .panel--show {
+  display: flex;
+}
+.panel__header {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.panel__content {
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.panel__alert {
+  width: 80%;
+  height: 2rem;
+  background-color: rgba(255, 0, 0, 0.4);
+  justify-self: flex-start;
+  display: flex;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 5px;
+  color: rgba(255, 0, 0, 0.7);
+}
+.panel__alert--hide {
+  visibility: hidden;
+}
+.panel__alert--show {
   display: flex;
 }
 
