todo medio funcionando, salto inicial a login no va i da solo 1 error de los 2, pasamos a arreglar. valorar volver a aqui

--- a/staff/adria-arquimbau/initial-app/style.css
+++ b/staff/adria-arquimbau/initial-app/style.css
@@ -6,8 +6,13 @@ body{
 section{
     border-radius: 15px;
     background-color: rgb(34, 140, 182);
-    margin: 12% 25%;
-    
+    margin: 12% 25%;  
+}
+.errorTextLogin {
+    color: red;
+}
+.errorTextRegister{
+    color: red;
 }
 button {
     border: 1px solid black;
