at the moment works v1

--- a/staff/lluis-agusti/initial-app/style.css
+++ b/staff/lluis-agusti/initial-app/style.css
@@ -38,10 +38,11 @@ h1 {
     font-size: 16px;
     margin: 4px 2px;
     cursor: pointer;
-  }
+}
 
-
-
+.errorTextLogin .errorTextRegister {
+    color: red;
+}
 
 
 
