update amb fallos

--- a/staff/adria-arquimbau/initial-app/Fet per mi 0.1/style.css
+++ b/staff/adria-arquimbau/initial-app/Fet per mi 0.1/style.css
@@ -8,7 +8,10 @@ section{
     background-color: rgb(34, 140, 182);
     margin: 12% 25%;  
 }
-.errorTextLogin {
+.errorTextLoginWrong {
+    color: red;
+}
+.errorTextLoginWrong {
     color: red;
 }
 .errorTextRegister{
