create new version

--- a/staff/oihane-unciti/initial-app/1/style.css
+++ b/staff/oihane-unciti/initial-app/1/style.css
@@ -10,3 +10,11 @@
 .panel--hide {
     display: none;
 }
+
+.letter--hide{
+    display : none;
+    color : red;
+}
+.letter--show {
+    display: block;
+}
