--- a/staff/carolina-zhou/initial-app/components.sass
+++ b/staff/carolina-zhou/initial-app/components.sass
@@ -76,9 +76,12 @@ main
         text-align: right    
 
 .confirmation
-    text-align: center
+    background-color: rgba(0, 128, 0, .45)
+    color: yellow
+    margin: 3em auto auto auto
+    padding: 30px
     width: 70%
-    margin: auto
+    text-align: center
     &__input
         width: 100%
         margin-top: .5em
@@ -128,7 +131,22 @@ main
         text-align: right    
 
 .home
+    background-color: rgba(0, 128, 0, .45)
+    color: yellow
+    margin: 3em auto auto auto
+    padding: 30px
+    width: 70%
     text-align: center
+
+.error
+    background-color: rgba(100, 0, 0, .25)
+    color: darkRed
+    width: 70%
+    margin: 1em auto auto auto
+    padding: 30px
+    &__title
+        font-weight: bold
+        font-size: 22px
 
 .footer
     background-color: #ffc400
