add testing, separates app  in presentation, logic and data

--- a/staff/jaume-villarreal/initial-app/css/btn.sass
+++ b/staff/jaume-villarreal/initial-app/css/btn.sass
@@ -1,9 +1,9 @@
 .btn-set
-        display: flex
-        flex-direction: column
-        width: 90%
-        justify-content: center
-        align-items: center
+    display: flex
+    flex-direction: column
+    width: 90%
+    justify-content: center
+    align-items: center
 
 .btn
     display: flex
@@ -11,8 +11,8 @@
     align-items: center
     width: 10rem
     margin: 1rem
-    padding: 1rem
-    font-size: 1rem
+    padding: .5rem
+    font-size: 1.25rem
     background-color: #c9c9c9
     border-radius: .5rem
     border: 2px solid #c0c0c0
@@ -21,10 +21,7 @@
     transition: .5
     &--form
         width: 100%
-    &:hover
-        background-color: green
-        border: 2px solid green
-        color: white
+        font-size: 1.25rem
     &--back
         width: 8rem
         &:hover
@@ -38,3 +35,9 @@
         width: 5rem
         text-align: center
         margin: 0 .25rem 0 0
+    &:hover
+        background-color: green
+        border: 2px solid green
+        color: white
+    &:focus
+        outline: none
