--- a/staff/jaume-villarreal/initial-app/css/normalize.sass
+++ b/staff/jaume-villarreal/initial-app/css/normalize.sass
@@ -2,19 +2,20 @@ html
     margin: 0
     padding: 0
     box-sizing: border-box
+    font-size: 16px
 
 body 
     width: 75vw
-    margin: 2rem auto
+    margin: 1rem auto
 
 .wrapper
-    font-family: Helvetica, Arial, sans-serif
+    font-family: 'Darker Grotesque', sans-serif
     width: 90%
 
 .header-1
     font-size: 3rem
     width: 75%
-    margin: 0 auto 2rem
+    margin: 0 auto 1rem
     text-align: center
     color: #666
 
