--- a/staff/jaume-villarreal/initial-app/css/panel.sass
+++ b/staff/jaume-villarreal/initial-app/css/panel.sass
@@ -3,7 +3,7 @@
     width: 75%
     height: auto
     margin: 0 auto
-    padding: 1rem 3rem
+    padding: .5rem 3rem
     border-radius: 1rem
     background-color: #f9f9f9
     &--show
@@ -13,3 +13,8 @@
         justify-content: center
     &--hide
         display: none
+    &__feedback
+        display: none
+        color: red
+        text-align: center
+        padding: .25rem
