--- a/staff/jaume-villarreal/initial-app/css/form.sass
+++ b/staff/jaume-villarreal/initial-app/css/form.sass
@@ -6,7 +6,7 @@
     align-items: center
     >label
         display: block
-        margin-bottom: .5rem
+        margin-bottom: .25rem
         align-self: flex-start
 
     >input
@@ -15,7 +15,9 @@
         height: 1.5rem
         padding: .25rem
         text-align: center
-        margin-bottom: 1.25rem
+        margin-bottom: .75rem
         font-size: 1rem
+        outline: none
+            
         
         
