--- a/staff/christian-haag/initial-app/style.sass
+++ b/staff/christian-haag/initial-app/style.sass
@@ -51,7 +51,7 @@ img
     margin-top: 35px
     width: 350px
     height: auto
-    min-height: 25vh
+    
     background-color: #f5f5f5
     border-radius: 7px
 
@@ -69,8 +69,10 @@ img
     margin: 50px 15px
 
 
-.panel--hide
+.panel
+    
+    &--hide
         display: none
 
-.panel--show
+    &--show
         display: block
