--- a/staff/oihane-unciti/mucho-layout/all-sass/style.sass
+++ b/staff/oihane-unciti/mucho-layout/all-sass/style.sass
@@ -27,7 +27,6 @@ body
     list-style: none
     display: flex
     width: 30%
-    background-color: red
     margin-right: 0.5em
 
     &__li
@@ -52,25 +51,31 @@ body
         border-bottom: 1px solid $bkc
         margin-left: 1%
 
-.mosaic
+.container_img
     width: 95%
     margin: 0 auto
     display: flex
     flex-direction: column
 
+.article
+    width: 95%
+    margin: 0 auto
+    display: flex
+    flex-direction: column
+    margin-bottom: 10px
+    
+    &__information
+        width: 100%
+        background-color: $bkc
+        border: 1px solid white
+
 .img
     width: 100%
     height: auto
 
-.article__information
-    width: 100%
-    background-color: $bkc
-    border: 1px solid white
-
 .footer
     width: 95%
     margin: 0 auto
-    background-color: blue
 
     &__information
         width: 100%
@@ -79,15 +84,16 @@ body
     width: 100%
     display: flex
     flex-direction: column
-
-.social_networks__bloc
-    display: flex
-    flex-direction: column
+    
+    &__bloc
+        display: flex
+        flex-direction: column
 
 
 @media (min-width: 768px) 
     .header
         justify-content: space-between 
+        width: 100%
  
     .menu
         display: flex
@@ -99,11 +105,12 @@ body
     .nav
         display: flex
         justify-content: flex-end
+        width: 97%
         
         &__border
             border: 0
 
-    .mosaic
+    .container_img
         flex-direction: row
         flex-wrap: wrap
 
@@ -111,16 +118,17 @@ body
         width: 50% 
         padding: 0
     
-    .article__information
-        width: 50%
-        padding: 0
+    .article
+        flex-direction: row
+        flex-wrap: wrap
+
+        &__information
+            width: 49.5%
+            padding: 0
 
     .menu
         display: inline-flex
         list-style:none
-        
-        &__red
-           
 
     .footer
         display: flex
@@ -134,15 +142,15 @@ body
     .social_networks
         flex-direction: row-reverse
         justify-content: space-between
-    
-    .social_networks__bloc
-        flex-direction: row
-        justify-content: space-between
-        align-items: center
-        width: 40%
-    
-    .social_networks__copy
-        width: 40%
+        
+        &__bloc
+            flex-direction: row
+            justify-content: space-between
+            align-items: center
+            width: 40%
+        
+        &__copy
+            width: 40%
 
     .menu__social
         width: 70%
@@ -160,13 +168,12 @@ body
         justify-content: flex-end
         &__li
             display: block
-
-
-    .header__presentation
-        display: block
-
+        
     .header
         justify-content: space-between
+
+        &__presentation
+            display: block
         
     .nav
         display: flex
@@ -175,7 +182,7 @@ body
         &__border
             border: 0
 
-    .mosaic
+    .container_img
         display: grid
         grid-template-columns: repeat(4, 25%)
         grid-template-rows: repeat(4, 1fr)
@@ -206,17 +213,18 @@ body
         grid-row-start: 4
         grid-row-end: 6
         
-
     .article__information
-        width: 100%
+        width: 33.1%
         
     .menu
         list-style:none
+        
+        &__red
+            justify-content: space-around
 
     .footer
         display: flex
         flex-wrap: wrap
-        width: 100%
             
         &__address
             width: 25%
@@ -224,8 +232,7 @@ body
         &__copy
             margin-rigth: 200px
 
-    .menu__red
-        justify-content: space-around
+        
    
 
 
