--- a/staff/carolina-zhou/initial-app/components.sass
+++ b/staff/carolina-zhou/initial-app/components.sass
@@ -4,6 +4,7 @@ body
     box-sizing: border-box
     margin: auto
     font-family: sans-serif
+    font-size: 22px
     background-image: url("https://cdn.pixabay.com/photo/2016/02/11/14/59/fruits-1193727_960_720.png")
     background-repeat: no-repeat
     background-size: cover
@@ -26,23 +27,23 @@ main
     display: none      
 
 .intro
-    background-color: rgba(0, 128, 0, .45)
-    margin-top: 3em
+    background-color: rgba(0, 128, 0, .65)
+    margin: 3em auto auto auto
     padding: 30px
     text-align: center
     color: yellow
-
+    font-size: 28px
+    max-width: 70%
     &__title
         margin: 0
         padding: 25px
-        font-size: 28px
 
     &__register, &__login
-        color: darkGreen
+        color: lightGreen
         text-decoration: none        
 
 .register
-    background-color: rgba(0, 128, 0, .45)
+    background-color: rgba(0, 128, 0, .65)
     color: yellow
     margin: 3em auto auto auto
     padding: 30px
@@ -66,17 +67,18 @@ main
 
     &__button
         border: none
-        padding: 5px
+        padding: 10px
         background-color: #fff000
         color: green
+        font-size: 22px
 
     &__back
-        color: darkGreen
+        color: lightGreen
         text-decoration: none  
         text-align: right    
 
 .confirmation
-    background-color: rgba(0, 128, 0, .45)
+    background-color: rgba(0, 128, 0, .65)
     color: yellow
     margin: 3em auto auto auto
     padding: 30px
@@ -93,11 +95,12 @@ main
     &__button
         margin-top: 2em
         border: none
-        padding: 5px
+        padding: 10px
+        font-size: 22px
         background-color: #fff000
 
 .login
-    background-color: rgba(0, 128, 0, .45)
+    background-color: rgba(0, 128, 0, .65)
     color: yellow
     margin: 3em auto auto auto
     padding: 30px
@@ -122,25 +125,30 @@ main
     &__button
         color: green
         border: none
-        padding: 5px
+        padding: 10px
+        font-size: 22px
         background-color: #fff000
 
     &__back
-        color: darkGreen
+        color: lightGreen
         text-decoration: none  
         text-align: right    
 
 .home
-    background-color: rgba(0, 128, 0, .45)
+    background-color: rgba(0, 128, 0, .65)
     color: yellow
     margin: 3em auto auto auto
     padding: 30px
     width: 70%
     text-align: center
+    &__logout
+        color: lightGreen
+        text-decoration: none  
+        text-align: right 
 
 .error
-    background-color: rgba(100, 0, 0, .25)
-    color: darkRed
+    background-color: rgba(100, 0, 0, .65)
+    color: white
     width: 70%
     margin: 1em auto auto auto
     padding: 30px
@@ -151,5 +159,6 @@ main
 .footer
     background-color: #ffc400
     color: white
+    margin-top: 2em
     padding: 15px
     text-align: center
