--- a/staff/adria-arquimbau/initial-app/3/style.css
+++ b/staff/adria-arquimbau/initial-app/3/style.css
@@ -7,6 +7,7 @@
   border: 0.1rem solid gray;
   border-radius: 1rem;
   background-color: lightgray;
+  display: grid;
 }
 .panel--show {
   display: block;
