--- a/staff/jaume-villarreal/initial-app/css/normalize.sass
+++ b/staff/jaume-villarreal/initial-app/css/normalize.sass
@@ -17,7 +17,16 @@ body
     width: 75%
     margin: 0 auto 1rem
     text-align: center
-    color: #666
+    // color: #666
+    color: #1DA5F3
+    font-family: Play, sans-serif
 
 .header-2
+    width: 100%
+    border-top: 1px solid #999999
+    border-bottom: 1px solid #999999
+    padding: .5rem
     color: #666
+    font-family: Play, sans-serif
+    text-align: center
+    background-color: #33333310
