--- a/staff/jaume-villarreal/initial-app/css/panel.sass
+++ b/staff/jaume-villarreal/initial-app/css/panel.sass
@@ -5,7 +5,10 @@
     margin: 0 auto
     padding: .5rem 3rem
     border-radius: 1rem
-    background-color: #f9f9f9
+    // background-color: #f9f9f9
+    -webkit-box-shadow: 0px 5px 8px 1px rgba(0,0,0,0.25)
+    -moz-box-shadow: 0px 5px 8px 1px rgba(0,0,0,0.25)
+    box-shadow: 0px 5px 8px 1px rgba(0,0,0,0.25)
     &--show
         display: flex
         flex-direction: column
@@ -14,7 +17,6 @@
     &--hide
         display: none
     &__feedback
-        display: none
         color: red
         text-align: center
         padding: .25rem
