--- a/staff/jaume-villarreal/initial-app/css/form.sass
+++ b/staff/jaume-villarreal/initial-app/css/form.sass
@@ -4,20 +4,25 @@
     flex-direction: column
     justify-content: center
     align-items: center
+    font-size: 1.25rem
     >label
         display: block
         margin-bottom: .25rem
         align-self: flex-start
+        
 
     >input
         display: block
         width: 90%
         height: 1.5rem
         padding: .25rem
+        font-family: 'Darker Grotesque', sans-serif
         text-align: center
         margin-bottom: .75rem
         font-size: 1rem
         outline: none
+        font-size: 1.5rem
+        color: #1DA5F3
             
         
         
