--- a/staff/jose-ortuno/initial-app/css/sass/components.sass
+++ b/staff/jose-ortuno/initial-app/css/sass/components.sass
@@ -1,38 +1,3 @@
-// RESET
-*
-    margin: 0
-    padding: 0
-    box-sizing: border-box
-    font-size: 16px
-// GENERAL
-body
-    font-family: Arial, Helvetica, sans-serif
-    font-weight: 400
-    color: $grey
-    display: flex
-    flex-direction: column
-    justify-content: center
-    align-items: center
-    
-h1
-    font-family: 'Lato', sans-serif
-    font-size: 1.1rem
-    font-weight: 400 
-h2
-    font-family: 'Lobster', cursive
-    font-size: 2rem
-    font-weight: 400
-a
-    font-family: 'Lato', sans-serif
-    font-style: italic
-    font-size: 1rem
-    color: $red
-    &:hover
-        opacity: 0.6
-p
-    font-family: 'Lato', sans-serif
-    font-size: 1rem
-
 // BLOKS
 .panel
     width: 70vw
@@ -73,6 +38,7 @@ p
         border: 1px solid $greyl
         border-radius: 1rem
         cursor: pointer
+        transition: 0.5s
         &:focus
             border: 1px solid $red
             border-radius: 1rem
@@ -83,6 +49,7 @@ p
     &__form-submit
         background-color: $grey
         color: $white
+        transition: 0.5s
         &:hover
             opacity: 0.6
 
@@ -97,6 +64,7 @@ p
         border: 1px solid $greyl
         border-radius: 1rem
         cursor: pointer
+        transition: 0.5s
         &:focus
             border: 1px solid $red
             border-radius: 1rem
@@ -107,5 +75,14 @@ p
     &__form-submit
         background-color: $grey
         color: $white
+        transition: 0.5s
         &:hover
             opacity: 0.6
+
+.error
+    background: $red
+    border-radius: 1rem
+    padding: 15px
+    color: $white
+    margin: 10px 0
+    text-align: center
