--- a/staff/felipe-fernandez/initial-app/style.sass
+++ b/staff/felipe-fernandez/initial-app/style.sass
@@ -36,7 +36,7 @@ button
 
 
     &--show
-        display: block
+        display: flex
 
 
     &--hide
@@ -52,3 +52,13 @@ button
         display: inline-block
         padding: 10%
 
+
+section 
+    justify-content: center
+
+form 
+    justify-content: center
+
+feedback
+
+    &--error 
