--- a/staff/jorge-rodri/initial-app/style.css
+++ b/staff/jorge-rodri/initial-app/style.css
@@ -1,61 +1,85 @@
-.panel__title {
-  font-family: "Permanent Marker", cursive, sans-serif;
-  font-size: 4em;
-  color: #0F7089;
-  margin-bottom: 3rem;
-}
-
-.panel--settings {
-  background-color: deepskyblue;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 18rem;
-  padding: 5rem 1rem;
-  width: 50rem;
+.feedback, .confirm, .alert, .panel {
+  padding: 0.5rem;
+  margin: 1.5rem;
 }
 
 .panel {
-  margin-bottom: 1rem;
+  border: 0.1rem solid gray;
+  border-radius: 1rem;
+  background-color: lightgray;
 }
-
-.panel a {
-  background-color: salmon;
-  border: 1px outset blue;
-  text-decoration: none;
-  margin: 1rem;
-  padding: 0.8rem;
-  color: grey;
-}
-
-.panel__form {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  text-align: center;
-  padding-bottom: 2.5rem;
-  margin-bottom: 0.4rem;
-}
-
-.panel__form button {
-  margin-top: 0.7rem;
-}
-
-.link--position {
-  padding: 0.8rem 1rem;
-}
-
 .panel--show {
   display: block;
 }
-
 .panel--hide {
   display: none;
 }
-
-.wrong {
+.panel__feedback {
+  border: 0.1rem solid gray;
+  border-radius: 1rem;
   color: red;
+  padding: 0.5rem;
+}
+
+.alert {
+  border: 0.1rem solid skyblue;
+  border-radius: 1rem;
+  background-color: rgba(135, 206, 235, 0.4);
+}
+.alert__title {
+  color: #0073ff;
+}
+.alert__body {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  font-size: 0.75rem;
+}
+.alert__accept {
+  border: 0.1rem solid skyblue;
+  border-radius: 1rem;
+}
+.alert--danger {
+  border-color: tomato;
+  background-color: rgba(255, 99, 71, 0.283);
+}
+.alert--danger > h2 {
+  color: #ff411f;
+}
+.alert--danger > button {
+  border-color: tomato;
+}
+
+.confirm {
+  border: 0.1rem solid plum;
+  border-radius: 1rem;
+  background-color: #ffcccc;
+}
+.confirm__title {
+  color: violet;
+}
+.confirm__body {
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-weight: 400;
+  font-size: 0.75rem;
+}
+.confirm__accept {
+  border: 0.1rem solid plum;
+  border-radius: 1rem;
+}
+.confirm__cancel {
+  border: 0.1rem solid plum;
+  border-radius: 1rem;
+}
+
+.feedback--success {
+  background-color: greenyellow;
+}
+.feedback--warning {
+  background-color: yellow;
+}
+.feedback--error {
+  background-color: red;
+  color: white;
 }
 
 /*# sourceMappingURL=style.css.map */
