--- a/staff/jaume-villarreal/initial-app/css/btn.sass
+++ b/staff/jaume-villarreal/initial-app/css/btn.sass
@@ -19,15 +19,6 @@
     text-decoration: none
     color: #333
     transition: .5
-    &--form
-        width: 100%
-        font-size: 1.25rem
-    &--back
-        width: 8rem
-        &:hover
-            background-color: #1DA5F3
-            border-color: #1DA5F3
-            color: white
     &--inline
         display: inline-block
         padding: .5rem
@@ -41,3 +32,14 @@
         color: white
     &:focus
         outline: none
+    &--form
+        width: 100%
+        font-family: 'Darker Grotesque', sans-serif
+        font-size: 1.5rem
+        font-weight: bold
+    &--back
+        width: 8rem
+        &:hover
+            background-color: #1DA5F3
+            border-color: #1DA5F3
+            color: white
