--- a/staff/jaume-villarreal/initial-app/css/style.css
+++ b/staff/jaume-villarreal/initial-app/css/style.css
@@ -84,18 +84,6 @@ body {
   color: #333;
   transition: 0.5;
 }
-.btn--form {
-  width: 100%;
-  font-size: 1.25rem;
-}
-.btn--back {
-  width: 8rem;
-}
-.btn--back:hover {
-  background-color: #1DA5F3;
-  border-color: #1DA5F3;
-  color: white;
-}
 .btn--inline {
   display: inline-block;
   padding: 0.5rem;
@@ -111,6 +99,20 @@ body {
 }
 .btn:focus {
   outline: none;
+}
+.btn--form {
+  width: 100%;
+  font-family: "Darker Grotesque", sans-serif;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.btn--back {
+  width: 8rem;
+}
+.btn--back:hover {
+  background-color: #1DA5F3;
+  border-color: #1DA5F3;
+  color: white;
 }
 
 .form__input {
