--- a/staff/jaume-villarreal/initial-app/css/style.css
+++ b/staff/jaume-villarreal/initial-app/css/style.css
@@ -142,4 +142,24 @@ body {
   color: #1DA5F3;
 }
 
+.gallery {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  color: #1DA5F3;
+}
+.gallery__img {
+  width: 100%;
+}
+.gallery__img > h3 {
+  width: 100%;
+  text-align: center;
+}
+.gallery__img > img {
+  width: 100%;
+  border: 1px solid;
+}
+
 /*# sourceMappingURL=style.css.map */
