--- a/staff/juan-bovo/mucho-layout/style.css
+++ b/staff/juan-bovo/mucho-layout/style.css
@@ -1,286 +1,278 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
 .website-layout {
-    box-sizing: border-box;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    width: 100%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 100%;
 }
 
 .header-separator {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    border-bottom: 1px solid rgb(182, 182, 182);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #b6b6b6;
 }
 
-.header-paragraph {
-    padding-top: 5vh;
-    max-width: 25em;
-    display: none;
+.header-separator__paragraph {
+  padding-top: 5vh;
+  max-width: 25em;
+  display: none;
 }
 
 .header-title {
-    color: red;
+  color: red;
 }
 
-.main-title {
-    font-size: 3em;
-    padding: 4vh;
-    font-weight: bolder;
+.header-separator__title {
+  font-size: 3em;
+  padding: 4vh;
+  font-weight: bolder;
 }
 
 .navigation-panel {
-    display: flex;
+  display: flex;
 }
-
 .navigation-panel__container {
-    display: flex;
-    list-style: none;
+  display: flex;
+  list-style: none;
 }
-
 .navigation-panel__item {
-    display: block;
-    text-decoration: none;
-    padding: 5px;
-    font-size: 1em;
+  display: block;
+  text-decoration: none;
+  padding: 5px;
+  font-size: 1em;
+}
+.navigation-panel__item:active {
+  background-color: gray;
+}
+.navigation-panel__container {
+  display: none;
+}
+.navigation-panel__hamburguer-menu {
+  float: right;
+  font-size: 3em;
+  padding: 4vh;
+  color: gray;
 }
 
 .list-item--color {
-    color: rgb(182, 182, 182);
-}
-
-.navigation-panel__item:active{
-    background-color: gray;
-}
-
-.navigation-panel__container {
-    display: none;
-}
-
-.navigation-panel__hamburguer-menu {
-    float: right;
-    font-size: 3em;
-    padding: 4vh;
-    color: gray;
+  color: #b6b6b6;
 }
 
 .navigation {
-    display: flex;
-    text-align: center;
-    border-bottom: 1px solid rgb(182, 182, 182); 
+  display: flex;
+  text-align: center;
+  border-bottom: 1px solid #b6b6b6;
 }
 
-.navigation-title {
-    font-size: 2em;
-    font-weight: lighter;
-    padding: 3vh 5vh;
+.navigation__title {
+  font-size: 2em;
+  font-weight: lighter;
+  padding: 3vh 5vh;
 }
 
 .dropdown-menu {
-    display: flex;
-    list-style: none;
+  display: flex;
+  list-style: none;
 }
 
 .dropdown-menu__item {
-    display: block;
-    text-decoration: none;
+  display: block;
+  text-decoration: none;
 }
 
 .dropdown-menu {
-    display: none;
+  display: none;
 }
 
 .mosaic-grid {
-    display: grid;
-    grid-template-columns: 100%
+  display: grid;
+  grid-template-columns: 100%;
 }
 
-.project-div {
-    position: relative;
-    color: white;
+.mosaic-grid__container {
+  position: relative;
+  color: white;
 }
 
-.project-div img{
-    width: 100%;
+.mosaic-grid__container img {
+  width: 100%;
 }
 
 .project-title {
-    position: absolute;
-    top: 16px;
-    left: 16px;
+  position: absolute;
+  top: 16px;
+  left: 16px;
 }
 
-.project-div > p {
-    position: absolute;
-    top: 64px;
-    left: 16px;
+.mosaic-grid__container > p {
+  position: absolute;
+  top: 64px;
+  left: 16px;
 }
 
 .about-section {
-    display: grid;
-    grid-template-columns: 100%;
-    gap: 0.2rem;
+  display: grid;
+  grid-template-columns: 100%;
+  gap: 0.2rem;
 }
 
 .project-description {
-    background-color: rgb(233, 233, 233);
-    height: 20em;
-    color: #333;
+  background-color: #e9e9e9;
+  height: 20em;
+  color: #333;
 }
 
-.footer{
-    clear: both;
-    margin-top: 20px;
-    padding: 0px 0px 40px 10px;
+.footer {
+  clear: both;
+  margin-top: 20px;
+  padding: 0px 0px 40px 10px;
 }
 
-.approach-paragraph {
-    padding-left: 1em;
+.footer__approach-paragraph {
+  padding-left: 1em;
 }
 
 .addresses-wrapper {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  padding: 1em 0em;
+}
+
+.addresses-wrapper__location {
+  width: 90%;
+  padding: 2em 1em;
+}
+
+.contact-wrapper {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.contact-wrapper__social-media {
+  display: block;
+  padding: 0.5em 1em;
+}
+
+@media (min-width: 600px) {
+  .header-separator {
+    border: 0;
+    justify-self: center;
+  }
+
+  .header-separator__title {
+    font-size: 2em;
+  }
+
+  .navigation-panel__hamburguer-menu {
+    display: none;
+  }
+
+  .navigation-panel__container {
     display: flex;
-    width: 100%;
-    flex-wrap: wrap;
-    padding: 1em 0em;
-}
+    padding-top: 5vh;
+  }
 
-.address-location{
-    width: 90%;
-    padding: 2em 1em;
-}
-
-.contact-wrapper{
+  .sections-navigator {
     display: flex;
-    flex-direction: column-reverse;
+    justify-content: flex-end;
+  }
+
+  .navigation {
+    border: 0;
+  }
+
+  .navigation__title {
+    padding: 1vh;
+    font-size: 1em;
+  }
+
+  .mosaic-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.2rem;
+  }
+
+  .about-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 0.2rem;
+  }
+
+  .footer__approach-paragraph {
+    font-size: 1.3em;
+  }
+
+  .addresses-wrapper__location {
+    width: 40%;
+  }
+
+  .contact-wrapper {
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: larger;
+  }
+
+  .footer {
+    padding-left: 0;
+  }
 }
-
-.social-media {
-    display: block;
-    padding: 0.5em 1em;
-}
-
-@media (min-width:600px){
-    .header-separator{
-        border: 0;
-        justify-self: center;
-    }
-
-    .main-title {
-        font-size: 2em;
-    }
-
-    .navigation-panel__hamburguer-menu {
-        display: none;
-    }
-
-    .navigation-panel__container {
-        display: flex;
-        padding-top: 5vh;
-    }
-
-    .navigators {
-        display: flex;
-        justify-content: flex-end;
-    }
-
-    .navigation {
-        border: 0;
-    }
-
-    .navigation-title {
-        padding: 1vh;
-        font-size: 1em;
-    }
-
-    .mosaic-grid {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 0.2rem;
-    }
-
-    .about-section {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        gap: 0.2rem;
-    }
-
-    .approach-paragraph{
-        font-size: 1.3em;
-    }
-
-    .address-location {
-        width: 40%;
-    }
-
-    .contact-wrapper{
-        flex-direction: row;
-        justify-content: space-between;
-        font-size: larger;
-    }
-    
-    .footer{
-        padding-left: 0;
-    }
-}
-
 @media (min-width: 1000px) {
-    .header-separator {
-        margin-bottom: 2em;
-    }
+  .header-separator {
+    margin-bottom: 2em;
+  }
 
-    .header-paragraph {
-        display: block;
-    }
+  .header-separator__paragraph {
+    display: block;
+  }
 
-    .navigation{
-        display: none;
-    }
+  .navigation {
+    display: none;
+  }
 
-    .mosaic-grid {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: repeat(7, 1fr);
-        gap: 0.1rem 0.2rem;
-    }
+  .mosaic-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: repeat(7, 1fr);
+    gap: 0.1rem 0.2rem;
+  }
 
-    .about-section {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        gap: 0.2rem;
-    }
+  .about-section {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 0.2rem;
+  }
 
-    .project-div__big {
-        grid-column: 1 / 3;
-    }
+  .mosaic-grid__container--big1 {
+    grid-column: 1/3;
+    grid-row: 2/4;
+  }
 
-    #big1 {
-        grid-row: 2 / 4;
-    }
+  .mosaic-grid__container--big2 {
+    grid-column: 1/3;
+    grid-row: 4/6;
+  }
 
-    #big2 {
-        grid-row: 4 / 6;
-    }
+  .mosaic-grid__container--big3 {
+    grid-column: 1/3;
+    grid-row: 6/8;
+  }
 
-    #big3 {
-        grid-row: 6 / 8;
-    }
+  .addresses-wrapper {
+    align-content: space-between;
+  }
 
-    .addresses-wrapper {
-        align-content: space-between;
-    }
+  .addresses-wrapper__location {
+    width: 21%;
+  }
 
-    .address-location {
-        width: 21%;
-    }
+  .addresses-wrapper__contact-data {
+    font-size: 0.8em;
+  }
 
-    .contact-data{
-        font-size: 0.8em;
-    }
-
-    .contact-wrapper {
-        font-size: x-large;
-    }
+  .contact-wrapper {
+    font-size: x-large;
+  }
 }
+
+/*# sourceMappingURL=style.css.map */
