--- a/staff/jaume-villarreal/initial-app/css/gallery.sass
+++ b/staff/jaume-villarreal/initial-app/css/gallery.sass
@@ -1,15 +1,23 @@
 .gallery
     width: 100%
     display: flex
-    flex-direction: column
+    flex-direction: row
     flex-wrap: wrap
     justify-content: center
     color: #1DA5F3
     &__img
         width: 100%
-        >h3
-            width: 100%
-            text-align: center
-        >img
-            width: 100%
-            border: 1px solid
+        display: flex
+        flex-wrap: wrap
+        justify-content: space-evenly
+        >div
+            display: flex
+            flex-direction: column
+            justify-content: center
+            align-items: center
+            width: 40%
+            height: auto
+            margin: .25rem
+            padding: .25rem
+            >img
+                width: 100%
